# i2a2_extrachallenge

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  README.md  TASK.md  app.py  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements-production.txt  requirements.txt
agents/: __init__.py  analyser.py  reporter.py
components/: __init__.py  chat_interface.py  file_uploader.py  stats_display.py
config/: __init__.py  development.json  production.json  settings.py
data/: creditcard-tiny.csv
logs/: error_log.json
utils/: __init__.py  chart_generator.py  csv_processor.py  error_handler.py  llm_config.py  pattern_analyzer.py  performance.py  prompts.py
workflows/: __init__.py  analysis_workflow.py
